crates/schema/tests/compile_fail/number_no_multiline.stderr
error[E0599]: no method named `multiline` found for struct `NumberBuilder` in the current scope
 --> tests/compile_fail/number_no_multiline.rs:2:78
  |
2 |     let _ = nebula_schema::Field::number(nebula_schema::field_key!("count")).multiline();
  |                                                                              ^^^^^^^^^ method not found in `NumberBuilder`
